Final touches to readme and folder organization

--- a/example.ipynb
+++ b/example.ipynb
@@ -91,13 +91,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation time:  20.0\n",
+      "idx interp 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Utente\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cvxpy\\reductions\\solvers\\solving_chain.py:354: FutureWarning: \n",
+      "    You specified your problem should be solved by ECOS. Starting in\n",
+      "    CXVPY 1.6.0, ECOS will no longer be installed by default with CVXPY.\n",
+      "    Please either add an explicit dependency on ECOS or switch to our new\n",
+      "    default solver, Clarabel, by either not specifying a solver argument\n",
+      "    or specifying ``solver=cp.CLARABEL``.\n",
+      "    \n",
+      "  warnings.warn(ECOS_DEP_DEPRECATION_MSG, FutureWarning)\n",
+      "c:\\Users\\Utente\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cvxpy\\problems\\problem.py:1407: UserWarning: Solution may be inaccurate. Try another solver, adjusting the solver settings, or solve with verbose=True for more information.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CVXPY\n",
+      "Solve time: 8247.474 ms\n",
+      "Objective function value: 0.001027\n",
+      "\n",
+      "Generating code with CVXPYgen ...\n",
+      "CVXPYgen finished generating code.\n",
+      "Compiling python wrapper with CVXPYgen ... \n",
+      "CVXPYgen finished compiling python wrapper.\n",
+      "\n",
+      "Code generation successful!\n",
+      "Generated code can be found in: Codegen/ECOS/mpc_Thorpy_ECOS_Nmpc30_T3\n",
+      "Aborting execution.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Utente\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3516: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "from mpc.MPC_Codegen_Thorpy import MPC_gen\n",
     "from dynamics.RocketDynamics import RocketDynamics\n",
     "import casadi as ca\n",
+    "import os\n",
     "\n",
     "A_funcgen = ca.external(\"A_func\", \"Codegen/Casadi/A_func.so\")\n",
     "B_funcgen = ca.external(\"B_func\", \"Codegen/Casadi/B_func.so\")\n",
@@ -106,7 +168,9 @@
     "\n",
     "rocket_dyn = RocketDynamics('params.json')\n",
     "\n",
-    "\n",
+    "ecos_dir = 'Codegen/ECOS'\n",
+    "if not os.path.exists(ecos_dir):\n",
+    "    os.makedirs(ecos_dir)\n",
     "controller_dir = 'Codegen/ECOS/mpc_Thorpy_ECOS_Nmpc30_T3'\n",
     "\n",
     "mpc = MPC_gen('params.json',rocket_dyn,A_funcgen,B_funcgen,rk4_funcgen,controller_dir)\n",
