Requirements.txt testing

--- a/example.ipynb
+++ b/example.ipynb
@@ -12,8 +12,10 @@
     "   - The first step is to generate C code for the Jacobians and the Runge-Kutta 4 (RK4) function.\n",
     "   - After that, compile the generated C code into a dynamically linked library (`.so` file on Linux, `.dll` on Windows).\n",
     "\n",
+    "\n",
     "2. **Generate C code for the Controller**:\n",
     "   - Once the Jacobians and RK4 functions are compiled, generate the C code for the controller.\n",
+    "   \n",
     "\n",
     "3. **Run a Closed-Loop Simulation**:\n",
     "   - Use the compiled controller in a closed-loop simulation to track a reference trajectory.\n",
@@ -45,16 +47,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suggested Code Generation Routine:\n",
     "\n",
-    "Create codegeneration folder and inside it the folder for Casadi related code generation, move the A_func_SCVx.c B_fun_SCVxc.c rk4_func_SCVx.c files into Codegen/Casadi.\n",
-    "\n",
-    "Now the Jacobians and rk4 .c files have to be compiled, for example as such:\n",
-    "gcc -fPIC -shared rk4_func.c -o rk4_func.so\n",
-    "\n",
-    "Key point to notice is that once these functions are generated, they are not dependent on the parameters of the mpc but only on the model used to generate them (SCVx or Thorpy), so they can be generated and compiled once and never again, unless changes in the rocket dynamics model are made.\n",
     "### 1) **Generate C Code for the Jacobians and RK4 Function**\n",
-    "\n",
+    "-Create folder `Codegen/Casadi`.\n",
     "- Move the `A_func.c`, `B_func.c`, and `rk4_func.c` files into the `Codegen/Casadi` folder.\n",
     "\n",
     "### 2) **Compile the C Code into a Dynamically Linked Library**\n",
@@ -86,75 +81,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following chunck of code (which is the same as main_Codegen_SCVx) can then be run:"
+    "### Running the Code Generation Script  \n",
+    "\n",
+    "The following code snippet (which is the same as `main_Codegen_Thorpy`) can be executed to generate the MPC in C.  \n",
+    "\n",
+    "After a successful code generation, the script will prompt whether to continue running. Since the primary purpose is to generate the MPC in C, it is recommended to type **\"n\"** to exit.  \n",
+    "\n",
+    "Alternatively, typing **\"y\"** will continue running the Python version of the MPC. However, this is **not recommended**, as it is extremely slow.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation time:  20.0\n",
-      "idx interp 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Utente\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cvxpy\\reductions\\solvers\\solving_chain.py:354: FutureWarning: \n",
-      "    You specified your problem should be solved by ECOS. Starting in\n",
-      "    CXVPY 1.6.0, ECOS will no longer be installed by default with CVXPY.\n",
-      "    Please either add an explicit dependency on ECOS or switch to our new\n",
-      "    default solver, Clarabel, by either not specifying a solver argument\n",
-      "    or specifying ``solver=cp.CLARABEL``.\n",
-      "    \n",
-      "  warnings.warn(ECOS_DEP_DEPRECATION_MSG, FutureWarning)\n",
-      "c:\\Users\\Utente\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\cvxpy\\problems\\problem.py:1407: UserWarning: Solution may be inaccurate. Try another solver, adjusting the solver settings, or solve with verbose=True for more information.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "CVXPY\n",
-      "Solve time: 8247.474 ms\n",
-      "Objective function value: 0.001027\n",
-      "\n",
-      "Generating code with CVXPYgen ...\n",
-      "CVXPYgen finished generating code.\n",
-      "Compiling python wrapper with CVXPYgen ... \n",
-      "CVXPYgen finished compiling python wrapper.\n",
-      "\n",
-      "Code generation successful!\n",
-      "Generated code can be found in: Codegen/ECOS/mpc_Thorpy_ECOS_Nmpc30_T3\n",
-      "Aborting execution.\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Utente\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3516: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mpc.MPC_Codegen_Thorpy import MPC_gen\n",
     "from dynamics.RocketDynamics import RocketDynamics\n",
@@ -182,7 +122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After succsesfull code generation, the controller can be tested in a closed loop simulation (can be achieved by running main_SCVx)"
+    "### Testing the Controller  \n",
+    "\n",
+    "After successful code generation, the controller can be tested in a closed-loop simulation by running **`main_Thorpy`**.  \n"
    ]
   },
   {
